--- a/appspec.yml
+++ b/appspec.yml
@@ -6,18 +6,18 @@ files:
     destination: /var/www/html
     overwrite: yes
 
-hooks:
-  BeforeInstall:
-    - location: scripts/stop_apache.sh
-      runas: root
-  ApplicationStart:
-    - location: scripts/changepermission.sh
-      timeout: 3600
-  AfterInstall:
-    - location: scripts/start_apache.sh
-      timeout: 180
-      runas: root
-  ValidateService:
-    - location: scripts/status_apache.sh
-      timeout: 3600
-      runas: root
+#hooks:
+#  BeforeInstall:
+#    - location: scripts/stop_apache.sh
+#      runas: root
+#  ApplicationStart:
+#    - location: scripts/changepermission.sh
+#      timeout: 3600
+#  AfterInstall:
+#    - location: scripts/start_apache.sh
+#      timeout: 180
+#      runas: root
+#  ValidateService:
+#    - location: scripts/status_apache.sh
+#      timeout: 3600
+#      runas: root
